--- a/NotePad/package.json
+++ b/NotePad/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start":"nodemon --watch main.js --exec \"electron .\"",
+    "start": "nodemon --watch main.js --exec \"electron .\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +12,8 @@
   "devDependencies": {
     "electron": "^39.2.7",
     "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "@electron/remote": "^2.1.3"
   }
 }
